playing with bootstrap styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header') -%>
 
-<main class="container">
+<main class="container-xl bg-info">
     <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
+        <a href="/login" class="col-3 btn btn-secondary text-white"> Login</a>
+        <a href="/signup" class="col-3 btn btn-secondary text-white"> Signup</a>
     </div>
 </main>
     
