--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="container">
+    <header class="container-xl bg-info text-light">
       <div class="text-center">
         <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
         <span>The #100Devs Social Network</span>
