add node-geocoder, remove email field from profile view

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,8 +3,8 @@
   <div class="row mt-5">
       <div class="col-6">
           <div>
-              <p><strong>User Name</strong>: <%= user.userName %></p>
-              <p><strong>Email</strong>: <%= user.email %></p>
+              <p><b>User Name</b>: <%= user.userName %></p>
+              <!-- <p><b>Email</b>: <%= user.email %></p> -->
               <a href="/logout" class="col-3 btn btn-primary">Logout</a>
           </div>
           <div class="mt-5">
